--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -89,7 +89,7 @@
         display:none;
      ">
   Maneuver is currently not compatible with cell-phone browsers.
-  Please open this page on a laptop, desktop, or tablet.
+  Please open this page on a laptop, desktop, or tablet. <br> <br>
   Questions? >> AheadFlank.ai@gmail.com
 </div>
 
