--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -88,7 +88,7 @@
         /* hidden by default – JS toggles to 'flex' */
         display:none;
      ">
-  Maneuver is currently not compatible with cell-phone browsers.
+  Maneuver is currently not compatible with cell-phone browsers. <br> <br>
   Please open this page on a laptop, desktop, or tablet. <br> <br>
   Questions? >> AheadFlank.ai@gmail.com
 </div>
