--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -93,6 +93,98 @@
   Questions? >> AheadFlank.ai@gmail.com
 </div>
 
+	<!-- Terms of Service Modal -->
+<div id="tos-modal"
+     style="
+        position:fixed; inset:0;
+        background:rgba(0,0,0,0.95); color:#0f0;
+        z-index:9998;
+        display:none; flex-direction:column;
+        align-items:center; justify-content:flex-start;
+        overflow-y:auto; padding:1rem;
+        font-family:'Share Tech Mono',monospace;
+     ">
+  <pre id="tos-content" style="white-space:pre-wrap; max-width:60ch;">
+User Agreement
+
+Maneuver — Comprehensive User Agreement & Terms of Service
+
+Effective Date: June 25, 2025
+
+PLEASE READ THIS AGREEMENT CAREFULLY. By downloading, installing, accessing, or using the "Maneuver" application, including any associated software, website, or service (collectively, the “Services”), you agree to be bound by this User Agreement and Terms of Service (the “Agreement”).
+
+This Agreement is a legally binding contract between you ("User," "you") and SpecK Innovations LLC ("we," "us," "our"). If you do not agree to all terms and conditions, do not access or use the Services.
+
+1. CRITICAL SAFETY WARNING: FOR SIMULATION & EDUCATIONAL USE ONLY
+
+You expressly acknowledge, understand, and agree that the Maneuver application is NOT a certified navigational instrument. It is designed and intended for educational, entertainment, and simulation purposes ONLY.
+
+- DO NOT USE FOR REAL-WORLD NAVIGATION: You shall not, under any circumstances, use the App for actual navigation, collision avoidance, vessel operation, or any purpose where its failure, inaccuracy, or malfunction could lead to death, personal injury, or severe physical, environmental, or property damage.
+- NO RELIANCE ON SIMULATED DATA: All data displayed within the App, including but not limited to radar plots, vessel positions, courses, speeds, and Closest Point of Approach (CPA) calculations, is simulated. It does not reflect real-world conditions and must not be relied upon for making navigational decisions.
+- ALWAYS USE OFFICIAL EQUIPMENT: Safe marine navigation requires the use of approved, properly functioning, and certified navigational equipment (e.g., SOLAS-compliant RADAR, AIS, GPS, official electronic or paper charts). The App is not a substitute for such equipment or for prudent seamanship.
+
+2. License Grant & Restrictions
+
+- License: Subject to your full compliance with this Agreement, we grant you a limited, revocable, non-exclusive, non-transferable license to access and use the Services solely for your personal, non-commercial, and educational purposes.
+- Restrictions: You may not:
+    - Reverse-engineer, decompile, or otherwise attempt to discover the source code of the Services.
+    - Copy, modify, or create derivative works based on the Services.
+    - Resell, sublicense, lease, or otherwise distribute the Services.
+    - Use the Services for any high-risk, life-critical, or commercial activity.
+
+3. User Accounts & Security
+
+- Accurate Information: If account registration is required, you agree to provide complete and accurate information and to keep it updated.
+- Credentials: You are solely responsible for maintaining the confidentiality of your account credentials and for all activities that occur under your account. You must notify us immediately of any unauthorized use.
+
+4. Intellectual Property
+
+All software, documentation, trademarks, logos, and other materials provided as part of the Services are and remain the exclusive property of SpecK Innovations LLC and its licensors. No rights are granted except for the limited license expressly set forth herein.
+
+5. Disclaimer of All Warranties
+
+THE SERVICES ARE PROVIDED ON AN "AS IS" AND "AS AVAILABLE" BASIS, WITHOUT ANY WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED. TO THE FULLEST EXTENT PERMISSIBLE UNDER APPLICABLE LAW, WE DISCLAIM ALL WARRANTIES, INCLUDING BUT NOT LIMITED TO:
+
+- WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND NON-INFRINGEMENT.
+- WARRANTIES THAT THE SERVICES WILL BE UNINTERRUPTED, ERROR-FREE, SECURE, OR FREE FROM VIRUSES OR OTHER HARMFUL COMPONENTS.
+- WARRANTIES REGARDING THE ACCURACY, RELIABILITY, COMPLETENESS, OR TIMELINESS OF THE SIMULATED DATA OR CALCULATIONS WITHIN THE SERVICES.
+
+6. Limitation of Liability & Waiver of Claims
+
+IN CONSIDERATION FOR BEING PERMITTED TO USE THE SERVICES, YOU HEREBY AGREE TO THE FOLLOWING:
+
+TO THE MAXIMUM EXTENT PERMITTED BY LAW, IN NO EVENT WILL SPECK INNOVATIONS LLC, ITS AFFILIATES, EMPLOYEES, AGENTS, OR SUCCESSORS BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES, OR FOR ANY LOSS OF LIFE, PERSONAL INJURY, PROPERTY DAMAGE, LOSS OF PROFITS, REVENUES, DATA, OR GOODWILL, ARISING OUT OF OR IN CONNECTION WITH THE SERVICES, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
+
+OUR AGGREGATE LIABILITY SHALL NOT EXCEED THE GREATER OF (A) AMOUNTS PAID BY YOU TO US IN THE 12 MONTHS PRECEDING THE CLAIM OR (B) ONE HUNDRED U.S. DOLLARS (USD $100).
+
+YOU HEREBY KNOWINGLY AND VOLUNTARILY WAIVE, RELEASE, AND DISCHARGE SPECK INNOVATIONS LLC FROM ANY AND ALL CLAIMS, DEMANDS, OR CAUSES OF ACTION THAT YOU MAY NOW HAVE OR HEREAFTER HAVE, KNOWN OR UNKNOWN, ARISING OUT OF OR IN ANY WAY CONNECTED WITH YOUR USE OF THE SERVICES.
+
+7. Assumption of Risk & Indemnification
+
+- Assumption of Risk: You voluntarily assume all risks, known and unknown, associated with using the Services, including the risk of relying on simulated data for real-world decisions.
+- Indemnification: You agree to indemnify, defend, and hold harmless SpecK Innovations LLC from any claims, damages, liabilities, and expenses (including reasonable attorneys’ fees) arising from your use of the Services or your breach of this Agreement.
+
+8. Termination
+
+We may suspend or terminate your access to the Services immediately and without notice for any material breach of this Agreement, for any legal requirement, or to mitigate a security risk. Upon termination, your license to use the Services ceases immediately.
+
+9. Governing Law & Dispute Resolution
+
+- Governing Law: This Agreement shall be governed by and construed in accordance with the laws of the State of California, USA, without regard to its conflict of law principles.
+- Arbitration: Any dispute, claim, or controversy arising from or relating to this Agreement shall be finally settled by binding arbitration administered by the American Arbitration Association under its Commercial Arbitration Rules.
+- Class Action Waiver: To the fullest extent permitted by law, you and SpecK Innovations LLC agree that any dispute resolution proceedings will be conducted only on an individual basis and not in a class, consolidated, or representative action.
+
+10. General Provisions
+
+- Entire Agreement: This Agreement constitutes the entire agreement between you and SpecK Innovations LLC regarding the Services.
+- Modifications: We reserve the right to modify this Agreement at any time. Your continued use of the App after any such change constitutes your acceptance of the new Agreement.
+- Severability & Waiver: If any provision is held invalid, remaining provisions remain in full force. Failure to enforce any right is not a waiver of future enforcement.
+- Assignment: You may not assign this Agreement without our prior written consent. We may assign it freely.
+- Contact Information: Legal notices must be sent to: SpecK Innovations LLC, Email: aheadflank.ai@gmail.com
+  </pre>
+  <button id="tos-accept-btn" class="control-btn selected" style="margin-top:1rem;">ACCEPT</button>
+</div>
+
 <script>
 	/* ✧✧✧ 2️⃣  DEVICE-GUARD SCRIPT ✧✧✧ */
 	(function () {
@@ -114,9 +206,30 @@
 	    root.style.overflow   = phone ? 'hidden' : '';   // stop scroll underneath
 	  }
 	
-	  updateBlocker();                // on first load
-	  window.addEventListener('resize', updateBlocker);
-	})();
+	  updateBlocker();                // on first load  window.addEventListener('resize', updateBlocker);
+        })();
+</script>
+
+<script>
+  // Terms of Service modal logic
+  (function () {
+    const modal = document.getElementById('tos-modal');
+    const acceptBtn = document.getElementById('tos-accept-btn');
+    const root = document.documentElement;
+    const accepted = localStorage.getItem('userAgreementAccepted');
+    if (!accepted) {
+      modal.style.display = 'flex';
+      root.style.overflow = 'hidden';
+    }
+    acceptBtn.addEventListener('click', () => {
+      modal.style.display = 'none';
+      root.style.overflow = '';
+      const time = new Date().toISOString();
+      localStorage.setItem('userAgreementAccepted', 'true');
+      localStorage.setItem('userAgreementAcceptedTime', time);
+      console.log('User agreement accepted at', time);
+    });
+  })();
 </script>
 	
     <main class="flex flex-row main-content relative">
