--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -234,9 +234,10 @@ We may suspend or terminate your access to the Services immediately and without 
 	
     <main class="flex flex-row main-content relative">
         <!-- Maneuver Title in the upper left corner -->
-        <div id="maneuver-title" class="absolute top-4 text-radar-green font-bold tracking-wide" style="font-size: 2.25rem; left: 10px;">
-            Maneuver
-        </div>
+	<div id="maneuver-title" class="absolute top-4 text-radar-green font-bold tracking-wide" 
+	     style="font-size: 2.25rem; left: 10px; z-index: 20;">
+	    Maneuver
+	</div>
 
         <!-- Left Pane: Vertical Button Bar -->
         <div id="button-bar" class="p-2 flex flex-col items-center gap-2 justify-end flex-shrink-0">
