--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -80,10 +80,10 @@
         .control-btn[data-tooltip]::after {
             content: attr(data-tooltip);
             position: absolute;
-            bottom: 100%;
-            left: 50%;
-            transform: translateX(-50%);
-            margin-bottom: 0.25rem;
+            top: 50%;
+            left: 100%;
+            transform: translateY(-50%);
+            margin-left: 0.25rem;
             background-color: rgba(0, 0, 0, 0.8);
             color: var(--radar-green);
             padding: 0.125rem 0.25rem;
