--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -284,7 +284,7 @@ We may suspend or terminate your access to the Services immediately and without 
         <!-- Maneuver Title in the upper left corner -->
 	<div id="maneuver-title" class="absolute top-4 text-radar-green font-bold tracking-wide" 
 	     style="font-size: 2.25rem; left: 10px; z-index: 20;">
-	    M.
+	    Mnvr.
 	</div>
 
         <!-- Left Pane: Vertical Button Bar -->
