--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -1221,15 +1221,15 @@ function updateWindDataDisplay() {
                 const gapWidth = 40;
                 const clockRect = simClock.getBoundingClientRect();
                 const mainRect = mainContainer.getBoundingClientRect();
-                const windTop = clockRect.top + clockRect.height / 2 - mainRect.top;
-                windDataDisplay.style.top = `${windTop}px`;
+                // Align the wind display with the top of the simulation clock
+                const windTop = clockRect.top - mainRect.top;
                 const leftWidth = buttonBar.offsetWidth;
                 const rightWidth = rightPane.offsetWidth;
                 const availableWidth = window.innerWidth - leftWidth - rightWidth - gapWidth * 2;
                 const availableHeight = window.innerHeight - gapWidth * 2;
                 const radarCenter = leftWidth + gapWidth + availableWidth / 2;
                 windDataDisplay.style.left = `${radarCenter}px`;
-                windDataDisplay.style.transform = 'translate(-50%, -50%)';
+                windDataDisplay.style.transform = 'translateX(-50%)';
 		    
                 radarContainer.style.width = `${availableWidth}px`;
                 radarContainer.style.height = `${availableHeight}px`;
