--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -1229,7 +1229,8 @@ function updateWindDataDisplay() {
                 const availableHeight = window.innerHeight - gapWidth * 2;
                 const radarCenter = leftWidth + gapWidth + availableWidth / 2;
                 windDataDisplay.style.left = `${radarCenter}px`;
-                windDataDisplay.style.transform = 'translateX(-50%, -10%)';		    
+                windDataDisplay.style.top = `${windTop}px`;
+                windDataDisplay.style.transform = 'translateX(-50%)';	    
                 radarContainer.style.width = `${availableWidth}px`;
                 radarContainer.style.height = `${availableHeight}px`;
                 radarContainer.style.marginTop = `${gapWidth}px`;
