--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -1238,9 +1238,9 @@ function updateWindDataDisplay() {
                 radarContainer.style.marginBottom = `${gapWidth}px`;
 
 		const radarCenter = leftWidth + gapWidth + availableWidth / 2;
-                const clockRect = simClock.getBoundingClientRect();
+                const radarRect = radarContainer.getBoundingClientRect();
                 const mainRect = mainContainer.getBoundingClientRect();
-                const windTop = clockRect.top - mainRect.top;
+                const windTop = radarRect.top - mainRect.top - 20;
 
                 windDataDisplay.style.left = `${radarCenter}px`;
                 windDataDisplay.style.top = `${windTop}px`;
@@ -1254,9 +1254,9 @@ function updateWindDataDisplay() {
                 canvas.style.height = `${size}px`;
 
                 // final alignment after layout changes
-                const cRect = simClock.getBoundingClientRect();
+                const rRect = radarContainer.getBoundingClientRect();
                 const mRect = mainContainer.getBoundingClientRect();
-                windDataDisplay.style.top = `${cRect.top - mRect.top}px`;
+                windDataDisplay.style.top = `${rRect.top - mRect.top - 20}px`;
                 canvas.style.height = `${size}px`;
 		    
                 // Scale the Maneuver title and other data titles
