--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -306,7 +306,7 @@ We may suspend or terminate your access to the Services immediately and without 
              class="absolute left-1/2 -translate-x-1/2 text-center text-radar-green z-20"></div>
 
         <!-- Left Pane: Vertical Button Bar -->
-        <div id="button-bar" class="p-2 flex flex-col items-center gap-2 justify-end flex-shrink-0">
+        <div id="button-bar" class="p-2 flex flex-col items-center gap-2 justify-end flex-shrink-0 ml-[15px]">
             <!-- Simulation Controls -->
             <button id="btn-play-pause" class="control-btn selected p-2" data-tooltip="Play/Pause Simulation">
                 <svg id="icon-play" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mx-auto hidden" fill="currentColor" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
