--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -297,7 +297,7 @@ We may suspend or terminate your access to the Services immediately and without 
 	
     <main class="flex flex-row items-center main-content relative">
         <!-- Maneuver Title in the upper left corner -->
-        <div id="maneuver-title" class="absolute top-4 text-radar-green font-bold tracking-wide"
+        <div id="maneuver-title" class="absolute top-4 text-radar-green font-bold tracking-wide p-3"
              style="font-size: 2.05rem; left: 10px; z-index: 20;">
             Mnvr.
         </div>
